hphp/test/zend/bad/ext/mysqli/tests/mysqli_result_references_mysqlnd.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');

require_once('connect.inc');
if (!$IS_MYSQLND)
	die("skip Test for mysqlnd only");

if ((version_compare(PHP_VERSION, '5.9.9', '>') == 1))
	die("skip (TODO) PHP 6.0 has a difference debug_zval_dump output format");
?>
<?php require_once('skipifemb.inc'); ?>